--- a/assets/styles.css
+++ b/assets/styles.css
@@ -6,7 +6,7 @@ body{
   grid-template-rows: auto 1fr auto;
 }
 
-header, #app{
+#app{
   margin-left: 10%;
   margin-right: 10%;
 }
@@ -104,6 +104,46 @@ header{
 }
 .col4{
   grid-column:4;
+}
+
+.pokeImg{
+  height: 150px;
+}
+
+
+.pokemon-detail{
+  background-color: white;
+  display: grid;
+}
+
+.id{
+  grid-column: 2;
+}
+
+.detailImg{
+  grid-row : 1/3;
+  grid-column: 2;
+}
+
+.pokeName{
+  grid-column: 2;
+  font-family: 'Pokemon Solid', sans-serif;
+  font-weight: lighter;
+  margin: 0;
+}
+
+.types{
+  grid-row :1;
+  grid-column: 3;
+}
+
+.pokeDesc{
+  grid-row: 2/5;
+  grid-column: 3;
+}
+
+.empty{
+  grid-column: 4;
 }
 
 footer{
