--- a/assets/styles.css
+++ b/assets/styles.css
@@ -114,30 +114,93 @@ header{
 
 .pokemon-detail{
   background-color: white;
+  border-radius: 3px;
+  margin: 1%;
   display: grid;
 }
 
-.id{
+.detailImg{
+  max-width : 350px;
+  height : 300px;
+  margin : 2%;
+  grid-row : 2/5;
   grid-column: 2;
 }
 
-.detailImg{
-  grid-row : 1/3;
-  grid-column: 2;
+.detailName, .id{
+  font-family: 'Minecraft', sans-serif;
+  font-weight: lighter;
+  margin : 1%;
+  font-size: 30px;
+}
+
+.id{
+  color : #615C56;
 }
 
 .types{
-  grid-row :1;
+  grid-row :4;
   grid-column: 3;
+  font-family: "Flexo-Regular",arial,sans-serif;
+  font-size: 18px;
 }
+
+.listTypes li{
+  display: inline-flex;
+  font-weight: bold;
+  list-style: none;
+  padding-top: 1%;
+  padding-bottom: 1%;
+  padding-left: 4%;
+  padding-right: 4%;
+  margin: 2%;
+  border: solid black 1px;
+  border-radius: 6px;
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  -ms-border-radius: 6px;
+  -o-border-radius: 6px;
+}
+
+.listTypes{
+  text-align: center;
+}
+
 
 .pokeDesc{
-  grid-row: 2/5;
+  grid-row: 2/4;
   grid-column: 3;
+  font-family: "Flexo-Regular",arial,sans-serif;
+  font-size: 18px;
+  margin : 1%;
 }
 
-.empty{
+.back-button{
+  text-align: center;
+  grid-row: 5;
   grid-column: 4;
+  padding : 1%;
+  border: solid 1px black;
+  background-color: #CD7B23;
+  border-radius: 3px;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -o-border-radius: 3px;
+  width : 90%;
+  font-family: 'Pokemon Solid', sans-serif;
+  font-weight: lighter;
+}
+
+.back-button:hover{
+  zoom : 102%;
+  opacity: 0.8;
+  cursor: pointer;
+}
+.bottom-detail{
+  grid-row : 1;
+  grid-column: 3;
+  display: inline-flex;
 }
 
 .pokemon{
@@ -152,13 +215,14 @@ header{
 }
 
 .pokeImg{
-  width: 100%;
+  width : 100%;
 }
 
 .pokeInfo{
   display: inline-flex;
   font-family: 'Minecraft', sans-serif;
   font-weight: lighter;
+  font-size : 20px;
 }
 
 .pokeName{
