--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,12 +1,13 @@
 body{
   margin : 0;
   background-image: url("./media/body_bg.png");
-  min-height:100vh;
-  display: grid;
-  grid-template-rows: auto 1fr auto;
+  min-height:100%;
 }
 
 #app{
+  display : flex;
+  flex-direction: column;
+  height : 100%;
   margin-left: 10%;
   margin-right: 10%;
 }
@@ -23,6 +24,10 @@ header{
 
 .titleLog{
   height: 100px;
+}
+
+.titleLog:hover{
+  cursor: pointer;
 }
 
 #head1{
